--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Triple B</title>
+    <title>Restaurant Page</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <button id="btn-home" type="button">Home</button>
+            <button id="btn-menu" type="button">Menu</button>
+            <button id="btn-about" type="button">About</button>
+        </nav>
+    </header>
+    <div id="content"></div>
 </body>
 </html>
