--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
         <nav>
             <button id="btn-home" type="button">Home</button>
             <button id="btn-menu" type="button">Menu</button>
-            <button id="btn-contact" type="button">About</button>
+            <button id="btn-contact" type="button">Contact</button>
         </nav>
     </header>
     <div id="content"></div>
